# PrintQue

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.txt  SECURITY.md  app.py  bambu_ftp.py  build.py  build_windows.py  commitlint.config.js  complete_build.py  config.py  generate_hardware_license.py  license_routes.py  license_validator.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_app.py  setup.py  support_routes.py  test_build.py
.cursor/rules/: coding-principles.mdc  verify-before-done.mdc
.github/workflows/: ci.yml  codeql.yml  commitlint.yml  release.yml  version-bump.yml
.husky/: commit-msg  pre-commit
api/: __version__.py  app.py  install.bat  install.sh  requirements-dev.txt  requirements.txt  ruff.toml  start.bat  start.sh
api/frontend_dist/: _shell.html
api/frontend_dist/assets/: main-CnV8hLU_.js  styles-CLoPa6hY.css
api/routes/: __init__.py  ejection_codes.py  history.py  license.py  orders.py  printers.py  support.py  system.py
api/services/: __init__.py  bambu_ftp.py  bambu_handler.py  default_settings.py  ejection_manager.py  order_distributor.py  print_jobs.py  printer_manager.py  printer_utils.py  state.py  status_poller.py
api/templates/: base.html  license.html
api/tests/: __init__.py  conftest.py
api/tests/test_routes/: __init__.py  test_ejection_codes.py  test_orders.py  test_printers.py  test_system.py
api/tests/test_services/: test_state.py  test_status_poller.py
api/utils/: __init__.py  config.py  console_capture.py  logger.py  retry_utils.py  status_poller_helpers.py  utils.py
app/: README.md  package-lock.json  package.json  vite.config.ts
app/src/: routeTree.gen.ts  router.tsx  styles.css
app/src/__tests__/: setup.ts
app/src/__tests__/components/: PrinterCard.test.tsx
app/src/__tests__/hooks/: useOrders.test.tsx  usePrinters.test.tsx
app/src/__tests__/lib/: api.test.ts
app/src/components/layout/: StatsCards.tsx
app/src/hooks/: index.ts  useOrders.ts  usePrinters.ts  useStats.ts  useTheme.ts
app/src/lib/: api.ts  socket.ts
app/src/routes/: __root.tsx  ejection-codes.tsx  index.tsx  license.tsx  printers.tsx  stats.tsx  system.tsx
app/src/types/: index.ts
scripts/: build.py  build_windows.py  complete_build.py  install-macos.sh  run_app.py  test_build.py
static/: Dangerous giving everyone editing access isn_t it maybe_.docx
templates/: index.html
(+11 files in other folders)
