[project]
name = "printque"
version = "1.2.0"
description = "PrintQue - Open Source Print Farm Manager"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.semantic_release]
# Version locations - semantic-release will update these automatically
version_toml = ["pyproject.toml:project.version"]
version_variables = ["api/__version__.py:__version__"]

# Branch configuration
branch = "main"
build_command = ""

# Commit message format
commit_message = "chore(release): {version} [skip ci]"
commit_parser = "conventional"

# Tag format
tag_format = "v{version}"

# Disable changelog (we generate it in release workflow)
changelog_generate = false

[tool.semantic_release.commit_parser_options]
# Conventional commit parser options
allowed_tags = [
    "build",
    "chore", 
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
# Don't create GitHub releases - the Release Build workflow handles that
upload_to_vcs_release = false
dist_glob_patterns = []